--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gameobjectinstance/GameObjectInstanceEditor.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobjectinstance.GameObjectInstanceEditorController">
+<BorderPane id="BorderPane" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gameobjectinstance.GameObjectInstanceEditorController">
   <center>
     <VBox>
       <children>
@@ -34,11 +34,12 @@
         <TextField fx:id="xTextField" prefWidth="45.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
         <Label text="Y" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
         <TextField fx:id="yTextField" prefWidth="45.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-        <Label text="Rot." GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <TextField id="widthTextField" fx:id="rotationTextField" prefWidth="45.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-        <Label text="Degrees" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
-        <Hyperlink fx:id="jumpToObject" text="Jump to object..." GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" GridPane.rowSpan="1" />
-        <CheckBox fx:id="visible" mnemonicParsing="false" text="Visible" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+        <Label text="Rot." GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField id="widthTextField" fx:id="rotationTextField" prefWidth="45.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Degrees" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+        <Hyperlink fx:id="jumpToObject" text="Jump to object..." GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" GridPane.rowSpan="1" />
+        <CheckBox fx:id="visible" mnemonicParsing="false" text="Visible" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+        <CheckBox id="visible" fx:id="absolutePosition" mnemonicParsing="false" text="Absolute position" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -48,6 +49,7 @@
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
       </columnConstraints>
       <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
