--- a/gameengine-androidrenderer/res/layout/activity_main.xml
+++ b/gameengine-androidrenderer/res/layout/activity_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
-         android:id="@+id/webview"
-         android:layout_width="fill_parent"
-         android:layout_height="fill_parent"
-        />
+<FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
+    <view android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          class="de.mirkosertic.gameengine.android.AndroidCanvas" android:id="@+id/canvasView"
+          android:layout_gravity="center"/>
+</FrameLayout>
