--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/EventSheetEditor.fxml
@@ -7,18 +7,22 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
+<BorderPane id="BorderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.contentarea.eventsheet.EventSheetEditorController">
   <center>
-    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-      <children>
-        <Hyperlink onAction="#onAddNewRule" text="Add new  rule" />
-        <VBox fx:id="rulesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
-          <VBox.margin>
-            <Insets top="10.0" />
-          </VBox.margin>
+    <ScrollPane fitToHeight="false" fitToWidth="false" hbarPolicy="AS_NEEDED" maxWidth="1.7976931348623157E308" pannable="false" prefHeight="-1.0" prefWidth="-1.0">
+      <content>
+        <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+          <children>
+            <Hyperlink onAction="#onAddNewRule" text="Add new  rule" />
+            <VBox fx:id="rulesList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+              <VBox.margin>
+                <Insets top="10.0" />
+              </VBox.margin>
+            </VBox>
+          </children>
         </VBox>
-      </children>
-    </VBox>
+      </content>
+    </ScrollPane>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
