--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/collisioncondition/CollisionEventConditionEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/contentarea/eventsheet/collisioncondition/CollisionEventConditionEditor.fxml
@@ -34,12 +34,23 @@
             </FXCollections>
           </items>
         </ComboBox>
+        <Label text="Position:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <ComboBox fx:id="position" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Item 1" />
+              <String fx:value="Item 2" />
+              <String fx:value="Item 3" />
+            </FXCollections>
+          </items>
+        </ComboBox>
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="-1.0" />
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="-1.0" />
       </columnConstraints>
       <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       </rowConstraints>
