--- a/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gamescene/GameSceneEditor.fxml
+++ b/gamecomposer/src/main/java/de/mirkosertic/gamecomposer/objectinspector/gamescene/GameSceneEditor.fxml
@@ -10,59 +10,58 @@
 
 <BorderPane id="BorderPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="-1.0" prefWidth="-1.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="de.mirkosertic.gamecomposer.objectinspector.gamescene.GameSceneEditorController">
   <center>
-    <VBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
+    <GridPane>
       <children>
-        <HBox prefHeight="-1.0" prefWidth="-1.0" spacing="0.0">
-          <children>
-            <Label prefWidth="70.0" text="Name" />
-            <TextField fx:id="nameTextField" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-          </children>
-        </HBox>
-        <VBox prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label maxWidth="-1.0" prefWidth="-1.0" text="Default camera" VBox.vgrow="ALWAYS" />
-            <ComboBox id="defaultSceneComboBox" fx:id="defaultCamera" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
-              <items>
-                <FXCollections fx:factory="observableArrayList">
-                  <String fx:value="Item 1" />
-                  <String fx:value="Item 2" />
-                  <String fx:value="Item 3" />
-                </FXCollections>
-              </items>
-            </ComboBox>
-          </children>
-          <padding>
-            <Insets top="10.0" />
-          </padding>
-        </VBox>
-        <VBox prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label maxWidth="-1.0" prefWidth="-1.0" text="Default player" VBox.vgrow="ALWAYS" />
-            <ComboBox id="defaultSceneComboBox" fx:id="defaultPlayer" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER">
-              <items>
-                <FXCollections fx:factory="observableArrayList">
-                  <String fx:value="Item 1" />
-                  <String fx:value="Item 2" />
-                  <String fx:value="Item 3" />
-                </FXCollections>
-              </items>
-            </ComboBox>
-          </children>
-          <padding>
-            <Insets top="10.0" />
-          </padding>
-        </VBox>
-        <HBox alignment="CENTER_LEFT" prefHeight="-1.0" prefWidth="-1.0">
-          <children>
-            <Label maxWidth="-1.0" prefWidth="70.0" text="Background" />
-            <ColorPicker fx:id="backgroundColorPicker" />
-          </children>
-          <padding>
-            <Insets bottom="10.0" top="10.0" />
-          </padding>
-        </HBox>
+        <Label maxWidth="-1.0" prefWidth="-1.0" text="Default camera:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Label maxWidth="-1.0" prefWidth="-1.0" text="Default player:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <ComboBox id="defaultSceneComboBox" fx:id="defaultPlayer" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Item 1" />
+              <String fx:value="Item 2" />
+              <String fx:value="Item 3" />
+            </FXCollections>
+          </items>
+        </ComboBox>
+        <Label prefWidth="70.0" text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label maxWidth="-1.0" prefWidth="70.0" text="Background:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <ColorPicker fx:id="backgroundColorPicker" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="3" />
+        <Label text="Layout bounds:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <Label prefWidth="13.9998779296875" text="X" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <TextField fx:id="layoutBoundsX" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" prefWidth="-1.0" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="2" />
+        <Label text="Y" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+        <TextField fx:id="layoutBoundsY" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+        <Label prefWidth="-1.0" text="H" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+        <ComboBox id="defaultSceneComboBox" fx:id="defaultCamera" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="0">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Item 1" />
+              <String fx:value="Item 2" />
+              <String fx:value="Item 3" />
+            </FXCollections>
+          </items>
+        </ComboBox>
+        <Label text="W" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <TextField fx:id="layoutBoundsWidth" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+        <TextField fx:id="layoutBoundsHeight" maxWidth="-Infinity" prefWidth="50.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
       </children>
-    </VBox>
+      <columnConstraints>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" />
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+        <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+    </GridPane>
   </center>
   <padding>
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
